# plw

./: .gitignore  .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  plw.cabal  tapl.cabal
.github/workflows/: haskell.yml
src/Language/: Base.hs
src/Language/Base/: Parser.hs  Quote.hs
src/Language/Calc/: Lexer.x  Parser.y  Quote.hs  Semantics.hs  Syntax.hs
src/Language/Intro/: Lexer.hs  Parser.hs  Quote.hs  Semantics.hs  Syntax.hs
src/Language/SimpleBool/: Core.hs  Lexer.hs  Parser.hs  Quote.hs  Syntax.hs
src/Language/Untyped/: Base.hs  Core.hs  DeBruijn.hs  HOAS.hs  Lambda.hs  Lexer.hs  Parser.hs  Quote.hs  QuoteExamples.hs  Syntax.hs
test/: Main.hs
test/Language/Calc/: QuoteTests.hs
test/Language/SimpleBool/: QuoteTests.hs
test/Language/Untyped/: QuoteTests.hs
tests/: Main.hs
tests/Language/Intro/: QuoteTests.hs
tests/Language/SimpleBool/: QuoteTests.hs
tests/Language/Untyped/: QuoteTests.hs
