cabal-version:       2.4
name:                plw
version:             0.1.0.0
synopsis:            Programming Languages Workshop
description:         A small project for language experiments.
license:             Unlicense
license-file:        UNLICENSE
author:              Henry Till
maintainer:          henrytill@gmail.com
-- copyright:
category:            Language
build-type:          Simple

extra-source-files:
  .gitignore
  README.md

source-repository head
  type:     git
  location: https://github.com/henrytill/plw

library
  exposed-modules:     Language.Calc.Lexer
                       Language.Calc.Parser
                       Language.Calc.Quote
                       Language.Calc.Syntax
                       Language.Intro.Lexer
                       Language.Intro.Parser
                       Language.Intro.Quote
                       Language.Intro.Semantics
                       Language.Intro.Syntax
                       Language.Untyped.Core
                       Language.Untyped.Syntax
                       Language.Untyped.Parser
                       Language.Untyped.Quote
                       Language.SimpleBool.Core
                       Language.SimpleBool.Syntax
                       Language.SimpleBool.Parser
                       Language.SimpleBool.Quote
  other-modules:       Language.Base
                       Language.Base.Parser
                       Language.Base.Quote
                       Language.SimpleBool.Lexer
  -- other-extensions:
  build-depends:       base             >=4.10 && <5
                     , array            >=0.5  && <0.6
                     , parsec           >=3.1  && <3.2
                     , syb              >=0.7  && <0.8
                     , template-haskell >=2.12 && <2.22
  build-tool-depends:  alex:alex        >=3.2
                     , happy:happy      >=1.19
  hs-source-dirs:      src
  default-language:    Haskell98
  default-extensions:  ImportQualifiedPost
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Language.Calc.QuoteTests
                       Language.Intro.QuoteTests
                       Language.Untyped.QuoteTests
                       Language.SimpleBool.QuoteTests
  build-depends:       base        >=4.10 && <5
                     , tasty       >=1.0  && <1.4
                     , tasty-hunit >=0.10 && <0.11
                     , plw
  hs-source-dirs:      test
  default-language:    Haskell98
  default-extensions:  ImportQualifiedPost
  ghc-options:         -Wall
